app/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@mixin tablet {
  @media screen and (min-width: 768px) {
    @content;
  }
}

@mixin desktop {
  @media screen and (min-width: 1024px) {
    @content;
  }
}

* {
  color: #111111;
}

/* Mobile, Typography */
h1 {
  font-size: 2.75rem; /* 44px */
  font-weight: 900; /* Black */

  @include tablet {
    font-size: 6rem;
  }

  @include desktop {
    font-size: 8rem; /* 128px */
  }
}

h2 {
  font-size: 2.25rem; /* 36px */
  font-weight: 900; /* Black */

  @include tablet {
    font-size: 4.5rem;
  }

  @include desktop {
    font-size: 8rem; /* 96px */
  }
}

h3 {
  font-size: 1.5rem; /* 24px */
  font-weight: 500; /* Medium */

  @include tablet {
    font-size: 2rem;
  }

  @include desktop {
    font-size: 3rem; /* 48px */
    font-weight: 600; /* Semi-Bold */
    line-height: 3.75rem; /* 60px */
  }
}

h4 {
  font-size: 1.25rem; /* 20px */
  font-weight: 500; /* Medium */
  line-height: 1.5rem; /* 24px */

  @include tablet {
    font-size: 2rem; /* 32px */
    line-height: 2.5rem; /* 40px */
  }
}

p {
  font-size: 0.8125rem; /* 13px */
  font-weight: 400; /* Medium */

  @include tablet {
    font-size: 1.5rem; /* 24px */
  }

  @include desktop {
    font-size: 2rem; /* 32px */
    font-weight: 300; /* Regular */
  }
}

code {
  font-size: 0.25rem; /* 4px */

  @include desktop {
    font-size: 0.5rem; /* 8px */
  }
}

.score {
  font-size: 1rem; /* 16px */
  font-weight: 500; /* Medium */
  text-shadow:
    0 0 10px #90ff74,
    0 0 20px #90ff74,
    0 0 30px #e9e11f,
    0 0 40px #e9e11f,
    0 0 50px #90ff74,
    0 0 60px #90ff74,
    0 0 70px #90ff74;

  @include tablet {
    font-size: 1.5rem; /* 24px */
  }

  @include desktop {
    font-size: 3rem; /* 48px */
    font-weight: 600; /* Semi-Bold */
  }
}

.neon {
  filter: drop-shadow(0px 0rem 2rem rgba(233, 225, 31, 0.5))
    drop-shadow(0px 0rem 0.5rem rgba(83, 251, 42, 0.5));
}

// Intro
.hero {
  position: relative;
  width: 100%;
  overflow: hidden;

  @include desktop {
    position: absolute;
  }

  &__image {
    border-radius: 48px;
    width: 180px;
    height: 475px;

    @include tablet {
      border-radius: 64px;
      width: 400px;
      height: 800px;
    }

    @include desktop {
      width: 280px;
      height: 670px;
    }
  }

  &__full {
    @include tablet {
      border-radius: 64px;
    }
  }

  &__background {
    transform: perspective(500px) rotateX(-4deg);
    -webkit-transform: perspective(500px) rotateX(-4deg);
    box-shadow:
      0px 5.5px 3.6px rgba(0, 0, 0, 0.017),
      0px 15.2px 10px rgba(0, 0, 0, 0.025),
      0px 36.5px 24.1px rgba(0, 0, 0, 0.033),
      0px 121px 80px rgba(0, 0, 0, 0.05);

    @include tablet {
      transform: perspective(500px) rotateX(-2deg);
      -webkit-transform: perspective(500px) rotateX(-2deg);
    }
    @include desktop {
      transform: perspective(500px) rotateX(-2deg);
      -webkit-transform: perspective(500px) rotateX(-1deg);
    }
  }

  &__blur {
    background: rgba(255, 255, 255, 0.4);
    backdrop-filter: blur(80px);
    -webkit-backdrop-filter: blur(80px);
    border: 1px solid rgba(255, 255, 255, 0.3);
  }

  &__code {
    font-size: 0.22rem;
    position: absolute;
    top: 2.5rem;
    left: 50%;
    transform: translateX(-50%) translateX(-5%);
    z-index: 20;
    text-shadow:
      0 0 1px #fff,
      0 0 3px #fff,
      0 0 10px #44dbff,
      0 0 20px #44dbff;
    animation: glow 3s ease-in-out infinite alternate;

    @include tablet {
      font-size: 0.43rem;
      top: 5rem;
      transform: translateX(-50%);
    }
  }
}

// Glow animation for code
@keyframes glow {
  from {
    text-shadow:
      0 0 5px #fff,
      0 0 10px #44dbff;
  }
  to {
    text-shadow: 0 0 15px #44dbff;
  }
}

// Logos
.logo {
  margin: 2rem;
  animation: logoAnimation 2s ease-in-out infinite alternate;
  filter: drop-shadow(0px -2rem 3rem #ffffff);
  transition: transform 0.1s ease-in-out;

  @include tablet {
    margin: 4rem;
  }

  &:nth-child(even) {
    animation-delay: 1s;
  }
}

@keyframes logoAnimation {
  from {
    filter: drop-shadow(0px -2rem 3rem #ffffff);
    transform: rotate(-2deg);
  }
  to {
    filter: drop-shadow(0px 0rem 1rem rgba(255, 255, 255, 0.75));
    transform: rotate(2deg);
  }
}

// Audit Scores
.glass {
  &__gradient {
    background: linear-gradient(
      180deg,
      rgba(123, 245, 93, 0.2) 0%,
      rgba(255, 255, 255, 0) 100%
    );
    backdrop-filter: blur(32px);
    -webkit-backdrop-filter: blur(32px);
  }

  &__border {
    border: 1px solid rgba(113, 129, 109, 0.2);
  }
}

// Progress Circle Styles
#progress {
  transform: rotate(-90deg);
  filter: drop-shadow(0px 0rem 0.5rem #e9e11f)
    drop-shadow(0px 0rem 1rem #53fb2a);
}

circle {
  stroke-dashoffset: 0;
  stroke-width: 4%;
  fill: none;

  @include desktop {
    stroke-width: 2%;
  }
}

.bg {
  stroke: #efffe2;
  opacity: 0.3;
}

#progress .indicator {
  stroke: #d3ffaf;
}

